--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -51,13 +51,18 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.idgen.containerPort }}
-#        readinessProbe:  #TODO: Disabled as not sure how long this takes. Enable them carefully.
-#          tcpSocket:
-#            port: {{ .Values.services.idgen.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          tcpSocket:
-#            port: {{ .Values.services.idgen.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.idgen.healthUrl }}
+            port: {{ .Values.services.idgen.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDelay }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.idgen.healthUrl }}
+            port: {{ .Values.services.idgen.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialLivenessDelay }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
