added java_opts for booking service

--- a/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/booking-dep.yml
@@ -45,6 +45,8 @@ spec:
           value: {{ .Values.iamAdapterUrl }}
         - name: mosipbox_public_url
           value: {{ .Values.sitePublicUrl }}
+        - name: JDK_JAVA_OPTIONS
+          value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.booking.containerPort }}
 
