fixed annotaion change issues in ida, idrepo, resident

--- a/deployment/sandbox-v2/helm/charts/ida/templates/auth-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/auth-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.auth.servicePort }}
-    targetPort: {{ .Values.services.auth.containerPort }}
+  - port: {{ .Values.services.auth.ports.servicePort }}
+    targetPort: {{ .Values.services.auth.ports.containerPort }}
   selector:
     app: {{ .Values.services.auth.serviceName }} 
 
