--- a/deployment/sandbox-v2/helm/charts/ida/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/ingress-file.yaml
@@ -14,5 +14,5 @@ spec:
       - path: {{ $service.ingressPath }} 
         backend:
           serviceName: {{ $service.serviceName }}
-          servicePort: {{ $service.servicePort }} 
+          servicePort: {{ $service.ports.servicePort }} 
       {{- end }}
