--- a/deployment/sandbox-v2/helm/charts/ida/templates/kyc-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/kyc-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.kyc.servicePort }}
-    targetPort: {{ .Values.services.kyc.containerPort }}
+  - port: {{ .Values.services.kyc.ports.servicePort }}
+    targetPort: {{ .Values.services.kyc.ports.containerPort }}
   selector:
     app: {{ .Values.services.kyc.serviceName }} 
 
