--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.identity.servicePort }}
-    targetPort: {{ .Values.services.identity.containerPort }}
+  - port: {{ .Values.services.identity.ports.servicePort }}
+    targetPort: {{ .Values.services.identity.ports.containerPort }}
   selector:
     app: {{ .Values.services.identity.serviceName }} 
 
