--- a/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
@@ -50,16 +50,16 @@ spec:
         - name: iam_adapter_url_env
           value: {{ .Values.iamAdapterUrl }}
         ports:
-        - containerPort: {{ .Values.services.resident.containerPort }}
+        - containerPort: {{ .Values.services.resident.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.resident.healthUrl }} 
-            port: {{ .Values.services.resident.containerPort }} 
+            port: {{ .Values.services.resident.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
  #       livenessProbe:
  #         httpGet:
  #           path: {{ .Values.services.resident.healthUrl }} 
- #           port: {{ .Values.services.resident.containerPort }} 
+ #           port: {{ .Values.services.resident.ports.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }}
