--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -58,19 +58,19 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.internal.containerPort }}
+        - containerPort: {{ .Values.services.internal.ports.containerPort }}
         volumeMounts:
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.internal.healthUrl }} 
-            port: {{ .Values.services.internal.containerPort }} 
+            port: {{ .Values.services.internal.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
 #        livenessProbe:
 #          httpGet:
 #            path: {{ .Values.services.internal.healthUrl }} 
-#            port: {{ .Values.services.internal.containerPort }} 
+#            port: {{ .Values.services.internal.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }}
 #
