--- a/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
@@ -56,19 +56,19 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.kyc.containerPort }}
+        - containerPort: {{ .Values.services.kyc.ports.containerPort }}
         volumeMounts:
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.kyc.healthUrl }} 
-            port: {{ .Values.services.kyc.containerPort }} 
+            port: {{ .Values.services.kyc.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
 #        livenessProbe:
 #          httpGet:
 #            path: {{ .Values.services.kyc.healthUrl }} 
-#            port: {{ .Values.services.kyc.containerPort }} 
+#            port: {{ .Values.services.kyc.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }}
 #
