--- a/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
@@ -56,19 +56,19 @@ spec:
 #        - name: mosip_biosdk_service
 #          value: {{ .Values.biosdkServiceUrl }}
         ports:
-        - containerPort: {{ .Values.services.otp.containerPort }}
+        - containerPort: {{ .Values.services.otp.ports.containerPort }}
         volumeMounts:
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.otp.healthUrl }} 
-            port: {{ .Values.services.otp.containerPort }} 
+            port: {{ .Values.services.otp.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
   #        httpGet:
   #          path: {{ .Values.services.otp.healthUrl }} 
-  #          port: {{ .Values.services.otp.containerPort }} 
+  #          port: {{ .Values.services.otp.ports.containerPort }} 
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }}
   #
