--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/cred-req-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.credentialrequest.servicePort }}
-    targetPort: {{ .Values.services.credentialrequest.containerPort }}
+  - port: {{ .Values.services.credentialrequest.ports.servicePort }}
+    targetPort: {{ .Values.services.credentialrequest.ports.containerPort }}
   selector:
     app: {{ .Values.services.credentialrequest.serviceName }} 
 
