--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
@@ -52,17 +52,17 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.vid.containerPort }}
+        - containerPort: {{ .Values.services.vid.ports.containerPort }}
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.vid.healthUrl }} 
-            port: {{ .Values.services.vid.containerPort }} 
+            port: {{ .Values.services.vid.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
   #        httpGet:
   #          path: {{ .Values.services.vid.healthUrl }} 
-  #          port: {{ .Values.services.vid.containerPort }} 
+  #          port: {{ .Values.services.vid.ports.containerPort }} 
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }}
