--- a/deployment/sandbox-v2/helm/charts/kernel/templates/sync-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/sync-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.sync.servicePort }}
-    targetPort: {{ .Values.services.sync.containerPort }}
+  - port: {{ .Values.services.sync.ports.servicePort }}
+    targetPort: {{ .Values.services.sync.ports.containerPort }}
   selector:
     app: {{ .Values.services.sync.serviceName }} 
 
