--- a/deployment/sandbox-v2/helm/charts/pms/templates/policy-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/policy-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }} 
 spec:
   ports:
-  - port: {{ .Values.services.policy.servicePort }}
-    targetPort: {{ .Values.services.policy.containerPort }}
+  - port: {{ .Values.services.policy.ports.servicePort }}
+    targetPort: {{ .Values.services.policy.ports.containerPort }}
   selector:
     app: {{ .Values.services.policy.serviceName }} 
 
