--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-svc.yaml
@@ -9,4 +9,4 @@ spec:
     app: {{ .Values.services.ui.serviceName }}
   ports:
     - port: 80
-      targetPort: {{ .Values.services.ui.containerPort }}
+      targetPort: {{ .Values.services.ui.ports.containerPort }}
