--- a/deployment/sandbox-v2/helm/charts/admin/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ingress-file.yaml
@@ -15,7 +15,7 @@ spec:
       - path: {{ $service.ingressPath }} 
         backend:
           serviceName: {{ $service.serviceName }}
-          servicePort: {{ $service.servicePort }} 
+          servicePort: {{ $service.ports.servicePort }} 
         {{ end }}
       {{- end }}
 
