--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
@@ -27,15 +27,15 @@ spec:
         image: {{ .Values.services.ui.dockerImage  }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         ports:
-        - containerPort: {{ .Values.services.ui.containerPort }} 
+        - containerPort: {{ .Values.services.ui.ports.containerPort }} 
         readinessProbe:
           tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
+            port: {{ .Values.services.ui.ports.containerPort }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
           tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
+            port: {{ .Values.services.ui.ports.containerPort }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
