--- a/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
@@ -54,16 +54,16 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.auth.containerPort }}
+        - containerPort: {{ .Values.services.auth.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.auth.healthUrl }} 
-            port: {{ .Values.services.auth.containerPort }} 
+            port: {{ .Values.services.auth.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
   #        httpGet:
   #          path: {{ .Values.services.auth.healthUrl }} 
-  #          port: {{ .Values.services.auth.containerPort }} 
+  #          port: {{ .Values.services.auth.ports.containerPort }} 
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }}
