--- a/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
@@ -52,16 +52,16 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.notifier.containerPort }}
+        - containerPort: {{ .Values.services.notifier.ports.containerPort }}
 #        readinessProbe:  # TODO: Disabled. for some reason not working.
 #          httpGet:
 #            path: {{ .Values.services.notifier.healthUrl }} 
-#            port: {{ .Values.services.notifier.containerPort }} 
+#            port: {{ .Values.services.notifier.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
 #        livenessProbe:
 #          httpGet:
 #            path: {{ .Values.services.notifier.healthUrl }} 
-#            port: {{ .Values.services.notifier.containerPort }} 
+#            port: {{ .Values.services.notifier.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }}
