--- a/deployment/sandbox-v2/helm/charts/kernel/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/otp-dep.yaml
@@ -52,16 +52,16 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.otp.containerPort }}
+        - containerPort: {{ .Values.services.otp.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.otp.healthUrl }} 
-            port: {{ .Values.services.otp.containerPort }} 
+            port: {{ .Values.services.otp.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
  #       livenessProbe:
  #         httpGet:
  #           path: {{ .Values.services.otp.healthUrl }} 
- #           port: {{ .Values.services.otp.containerPort }} 
+ #           port: {{ .Values.services.otp.ports.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }}
