--- a/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
@@ -51,14 +51,14 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.prid.containerPort }}
+        - containerPort: {{ .Values.services.prid.ports.containerPort }}
         readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
           tcpSocket:
-            port: {{ .Values.services.prid.containerPort }}
+            port: {{ .Values.services.prid.ports.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
 #        livenessProbe:
 #          tcpSocket:
-#            port: {{ .Values.services.prid.containerPort }}
+#            port: {{ .Values.services.prid.ports.containerPort }}
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
