--- a/deployment/sandbox-v2/helm/charts/pms/templates/policy-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/policy-dep.yaml
@@ -52,16 +52,16 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.policy.containerPort }}
+        - containerPort: {{ .Values.services.policy.ports.containerPorts }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.policy.healthUrl }} 
-            port: {{ .Values.services.policy.containerPort }} 
+            port: {{ .Values.services.policy.ports.containerPorts }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
 #        livenessProbe:
 #          httpGet:
 #            path: {{ .Values.services.policy.healthUrl }} 
-#            port: {{ .Values.services.policy.containerPort }} 
+#            port: {{ .Values.services.policy.ports.containerPorts }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }}
