--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-dep.yaml
@@ -27,14 +27,14 @@ spec:
         image: {{ .Values.services.ui.dockerImage  }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         ports:
-        - containerPort: {{ .Values.services.ui.containerPort }} 
+        - containerPort: {{ .Values.services.ui.ports.containerPorts }} 
         readinessProbe:
           tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
+            port: {{ .Values.services.ui.ports.containerPorts }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
           tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
+            port: {{ .Values.services.ui.ports.containerPorts }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
