--- a/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
@@ -46,15 +46,15 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.batch.containerPort }}
+        - containerPort: {{ .Values.services.batch.ports.containerPort }}
 
         readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
           tcpSocket:
-            port: {{ .Values.services.batch.containerPort }}
+            port: {{ .Values.services.batch.ports.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
    #     livenessProbe:
    #       tcpSocket:
-   #         port: {{ .Values.services.batch.containerPort }}
+   #         port: {{ .Values.services.batch.ports.containerPort }}
    #       initialDelaySeconds: {{ .Values.probe.initialDelay }} 
    #       periodSeconds: {{ .Values.probe.period }} 
