--- a/deployment/sandbox-v2/helm/charts/prereg/templates/datasync-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/datasync-dep.yaml
@@ -50,17 +50,17 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.datasync.containerPort }}
+        - containerPort: {{ .Values.services.datasync.ports.containerPort }}
 
         readinessProbe:
           httpGet:
             path: {{ .Values.services.datasync.healthUrl }} 
-            port: {{ .Values.services.datasync.containerPort }} 
+            port: {{ .Values.services.datasync.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
   #        httpGet:
   #          path: {{ .Values.services.datasync.healthUrl }} 
-  #          port: {{ .Values.services.datasync.containerPort }} 
+  #          port: {{ .Values.services.datasync.ports.containerPort }} 
   #       initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }} 
