--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
@@ -32,15 +32,15 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.ui.containerPort }} 
+        - containerPort: {{ .Values.services.ui.ports.containerPort }} 
         readinessProbe:
           tcpSocket:
-            port: {{ .Values.services.ui.containerPort }}  # All defaults used
+            port: {{ .Values.services.ui.ports.containerPort }}  # All defaults used
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
   #      livenessProbe:
   #        tcpSocket:
-  #          port: {{ .Values.services.ui.containerPort }}  # All defaults used
+  #          port: {{ .Values.services.ui.ports.containerPort }}  # All defaults used
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #       periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
