--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-svc.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: default
 spec:
   ports:
-    - port: {{ .Values.services.ui.servicePort }} 
+    - port: {{ .Values.services.ui.ports.servicePort }} 
   selector:
     app: {{ .Values.services.ui.serviceName }}
