--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -50,14 +50,22 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.idgen.containerPort }}
-#        readinessProbe:  #TODO: Disabled as not sure how long this takes. Enable them carefully.
-#          tcpSocket:
-#            port: {{ .Values.services.idgen.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
+        - containerPort: {{ .Values.services.idgen.ports.containerPort }}
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.period }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
 #        livenessProbe:
-#          tcpSocket:
-#            port: {{ .Values.services.idgen.containerPort }}
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.livenessPeriod }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        startupProbe:
+#          httpGet:
+#            path: {{ .Values.services.idgen.healthUrl }}
+#            port: {{ .Values.services.idgen.ports.containerPort }}
+#          failureThreshold: {{ .Values.probe.failureThreshold }}
+#          periodSeconds: {{ .Values.probe.startupPeriod }}
