[PSA-36 updated kubernetes probes in kernel module]

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -55,14 +55,18 @@ spec:
           httpGet:
             path: {{ .Values.services.idgen.healthUrl }}
             port: {{ .Values.services.idgen.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDelay }}
           periodSeconds: {{ .Values.probe.period }}
           timeoutSeconds: {{ .Values.probe.timeout }}
-
         livenessProbe:
           httpGet:
             path: {{ .Values.services.idgen.healthUrl }}
             port: {{ .Values.services.idgen.ports.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialLivenessDelay }}
           periodSeconds: {{ .Values.probe.livenessPeriod }}
           timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.idgen.healthUrl }}
+            port: {{ .Values.services.idgen.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
