--- a/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
@@ -53,15 +53,22 @@ spec:
           value: {{ $podconfig.java_opts }}
         ports:
         - containerPort: {{ .Values.services.notifier.ports.containerPort }}
-#        readinessProbe:  # TODO: Disabled. for some reason not working.
-#          httpGet:
-#            path: {{ .Values.services.notifier.healthUrl }} 
-#            port: {{ .Values.services.notifier.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }} 
-#        livenessProbe:
-#          httpGet:
-#            path: {{ .Values.services.notifier.healthUrl }} 
-#            port: {{ .Values.services.notifier.ports.containerPort }} 
-#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-#          periodSeconds: {{ .Values.probe.period }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.services.notifier.healthUrl }}
+            port: {{ .Values.services.notifier.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.notifier.healthUrl }}
+            port: {{ .Values.services.notifier.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.notifier.healthUrl }}
+            port: {{ .Values.services.notifier.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
+
