--- a/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
@@ -57,13 +57,19 @@ spec:
         - containerPort: {{ .Values.services.auth.ports.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.auth.healthUrl }} 
-            port: {{ .Values.services.auth.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-  #      livenessProbe:
-  #        httpGet:
-  #          path: {{ .Values.services.auth.healthUrl }} 
-  #          port: {{ .Values.services.auth.ports.containerPort }} 
-  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-  #        periodSeconds: {{ .Values.probe.period }}
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.period }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          periodSeconds: {{ .Values.probe.livenessPeriod }}
+          timeoutSeconds: {{ .Values.probe.timeout }}
+        startupProbe:
+          httpGet:
+            path: {{ .Values.services.auth.healthUrl }}
+            port: {{ .Values.services.auth.ports.containerPort }}
+          failureThreshold: {{ .Values.probe.failureThreshold }}
+          periodSeconds: {{ .Values.probe.startupPeriod }}
